--- a/app/globals.css
+++ b/app/globals.css
@@ -232,6 +232,6 @@ hover effect 2
 .col-span-2::-webkit-scrollbar-track {
   background-color: transparent;
 }
-*{
+/* *{
 	font-family: 'Source Sans Pro', sans-serif;
-}
+} */
